--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
   </style>
 </head>
 <body>
-  <canvas id="canvas" width="800" height="800" style="border:1px solid #000000;">
+  <canvas id="canvas" width="400" height="400" style="border:1px solid #000000;">
   </canvas>
+  <input type="range" min="0" max="360" value="0" id="x">
+  <input type="range" min="0" max="360" value="0" id="y">
+  <input type="range" min="0" max="360" value="0" id="z">
+  <script src="objects.js"></script>
+
   <script src="main.js"></script>
 
 
